Fix todo-name overlapping with a checkbox in a narrow window

--- a/src/todo-item.scss
+++ b/src/todo-item.scss
@@ -11,9 +11,9 @@
   .container {
     --width: 1.6rem;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: subgrid;
     gap: calc(2rem - var(--width));
-    grid-column: 1/4;
+    grid-column: 1/3;
 
     .priority {
       width: var(--width);
@@ -22,7 +22,7 @@
   }
 
   .todo-name {
-    grid-column: 4/12;
+    grid-column: 3/12;
     justify-self: start;
   }
 
